--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ img {
 }
 
 .card-content {
-  background-color: #1d5d9b;
+  background-color: #9dbad4;
   color: white;
   padding: 20px;
 }
@@ -65,4 +65,33 @@ img {
 .author-info small {
   color: black;
   margin-top: 5px;
+}
+
+.animated-bg {
+  background-image: linear-gradient(
+    90deg,
+    rgba(215, 214, 224, 1) 0%,
+    rgba(252, 252, 252, 1) 55%,
+    rgba(231, 235, 237, 1) 72%,
+    rgba(232, 237, 238, 1) 100%
+  );
+
+  background-size: 200% 100%;
+  animation: bgPos 1s linear infinite;
+}
+.animated-bg-text {
+  border-radius: 50px;
+  display: inline-block;
+  margin: 0;
+  height: 10px;
+  width: 100%;
+}
+
+@keyframes bgPos {
+  0% {
+    background-position: 50% 0;
+  }
+  100% {
+    background-position: -150% 0;
+  }
 }
