--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: "Roboto Condensed", sans-serif;
-  background-color: #e0e5b6;
+  background-color: #00235b;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,6 +15,12 @@ body {
 
 img {
   max-width: 100%;
+}
+
+.cards {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
 }
 
 .card {
